==> SmartSamaan/SS-IP3BEM_Smart_IntelliMeter_Pro/ADE7758.cpp <==
#include <string.h>
#include <Arduino.h>
#include <SPI.h>
#include "ADE7758.h"

void ADE7758::enableChip(void)
{
	digitalWrite((AFECS),LOW);
}

void ADE7758::disableChip(void)
{
	digitalWrite((AFECS),HIGH);  
}
