==> tienanh129902/STM32-ADE7758/Core/Src/ADE7758.c <==
#include "ADE7758.h"

void enableChip(void)
{
	// digitalWrite((AFECS+8),LOW);
	HAL_GPIO_WritePin(_AFECS_port, _AFECS_pin, GPIO_PIN_RESET);
}

void disableChip(void)
{
	HAL_GPIO_WritePin(_AFECS_port, _AFECS_pin, GPIO_PIN_SET);
}
